# plutus-zk

./: README.md  cabal.project  flake.nix
.helix/: languages.toml
groth16/: groth16.cabal  params.json  redeemer.json
groth16/app/: Main.hs
groth16/src/Groth/: Check.hs  Data.hs  Example.hs  Setup.hs  Utils.hs  Validator.hs
plutus-benchmark-utils/: plutus-benchmark-utils.cabal
plutus-benchmark-utils/src/PlutusBenchmark/: Common.hs
