cabal-version: 3.0
name:          groth16
version:       0.1.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    radu.ometita@iohk.io
author:        Radu Ometita
homepage:      https://github.com/iohk/plutus#readme
bug-reports:   https://github.com/iohk/plutus/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/iohk/plutus

common lang
  default-language:   Haskell2010
  default-extensions:
    -- DeriveFoldable
    -- DeriveFunctor
    -- DeriveGeneric
    -- DeriveLift
    -- DeriveTraversable
    DerivingStrategies
    -- DerivingVia
    -- ExplicitForAll
    -- FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    -- ScopedTypeVariables
    -- StandaloneDeriving

  ghc-options:
    -fno-specialise -fno-spec-constr -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies

common ghc-version-support
  -- See the section on GHC versions in CONTRIBUTING
  if impl(ghc <9.2)
    buildable: False

library
  import:          lang

  if impl(ghc <9.0)
    buildable: False

  -- ghc-options:     -Wno-unused-packages
  hs-source-dirs:  src
  exposed-modules:
    Groth.Validator
    Groth.Example
    Groth.Utils
    Groth.Setup
    Groth.Data
    Groth.Check

  build-depends:
    , aeson
    , base                     >=4.9 && <5
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , deepseq
    , flat
    , hedgehog
    , plutus-ledger-api             ^>=1.7
    , plutus-core              ^>=1.7
    , plutus-tx                ^>=1.7
    , plutus-tx-plugin         ^>=1.7
    , plutus-benchmark-utils
    , serialise
    , text
        
executable groth
  import:           lang

  if impl(ghc <9.0)
    buildable: False

  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , aeson
    , base                   >=4.9 && <5
    , groth16
    , bytestring
    , plutus-tx
    , plutus-benchmark-utils
    , tasty-hunit
