cabal-version: 3.0
name:          plutus-benchmark-utils
version:       0.1.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    radu.ometita@iohk.io
author:        Radu Ometita
homepage:      https://github.com/iohk/plutus#readme
bug-reports:   https://github.com/iohk/plutus/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus#readme>

build-type:    Simple
data-files:
  common/templates/*.tpl
  validation/data/*.flat

source-repository head
  type:     git
  location: https://github.com/iohk/plutus

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -fno-specialise -fno-spec-constr -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies

common ghc-version-support
  -- See the section on GHC versions in CONTRIBUTING
  if impl(ghc <9.2)
    buildable: False

---------------- Common code for benchmarking ----------------

library 
  import:          lang
  ghc-options:     -Wno-unused-packages
  hs-source-dirs:  src
  exposed-modules:
    PlutusBenchmark.Common
    PlutusBenchmark.NaturalSort
    PlutusBenchmark.ProtocolParameters
    PlutusBenchmark.ScriptContexts

  other-modules:   Paths_plutus_benchmark_utils
  build-depends:
    , base          >=4.9 && <5
    , bytestring
    , criterion
    , directory
    , filepath
    , flat
    , plutus-core   ^>=1.7
    , plutus-tx     ^>=1.7
    , plutus-ledger-api ^>=1.7
    , plutus-tx-plugin ^>=1.7
    , tasty
    , tasty-golden
    , temporary
